<resources>
    <string name="app_name">Geyser Android</string>
    <string name="app_site">https://geysermc.org</string>
    <string name="app_discord">https://discord.geysermc.org</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Geyser Android</string>
    <string name="nav_header_subtitle">geysermc.org</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_config_help">Help</string>
    <string name="action_config_editor">Config Editor</string>

    <string name="default_ip">test.geysermc.org</string>
    <string name="default_port_be">19132</string>
    <string name="default_port_je">25565</string>

    <string name="utils_loader">Loading...</string>

    <!-- Navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_proxy">LAN Proxy</string>
    <string name="menu_geyser">Geyser</string>
    <string name="menu_links">Links</string>
    <string name="menu_website">Website</string>
    <string name="menu_discord">Discord</string>

    <!-- Home Screen -->
    <string name="home_desc">Geyser Android is an android version of Geyser including a server redirection proxy.</string>
    <string name="home_join_be">Join a Bedrock server</string>
    <string name="home_join_je">Join a Java server</string>

    <!-- Proxy Screen -->
    <string name="proxy_address">Address</string>
    <string name="proxy_port">Port</string>
    <string name="proxy_start">Start</string>
    <string name="proxy_starting">Starting</string>
    <string name="proxy_stop">Stop</string>
    <string name="proxy_logs">Logs</string>
    <string name="proxy_background_notification">LAN Proxy is running in the background!</string>

    <!-- Geyser Screen -->
    <string name="geyser_config">Config</string>
    <string name="geyser_start">Start</string>
    <string name="geyser_starting">Starting</string>
    <string name="geyser_stop">Stop</string>
    <string name="geyser_logs">Logs</string>
    <string name="geyser_command">Command</string>
    <string name="geyser_not_running">Geyser is not currently running!</string>
    <string name="geyser_background_notification">Geyser is running in the background!</string>
    <string name="geyser_command_failed">Failed to run command!</string>

    <!-- Config Editors -->
    <string name="config_editor_save_title">Save</string>
    <string name="config_editor_save_message">Do you wish to save the config?</string>
    <string name="config_editor_save_save">Save</string>
    <string name="config_editor_save_failed">Unable to write config!</string>
    <string name="config_editor_save_discard">Discard</string>
    <string name="config_editor_config_missing">Unable to locate config, please start the server first!</string>

    <!-- Simple Config Editor -->
    <string name="config_editor_simple_title">Simple Config Editor</string>
    <string name="config_editor_simple_address">Address</string>
    <string name="config_editor_simple_port">Port</string>
    <string name="config_editor_simple_auth_type">Auth Type</string>
    <string name="config_editor_simple_advanced">Advanced</string>
    <string name="config_editor_simple_user_auths">User Auths</string>
    <string name="config_editor_simple_generate_failed_title">Config failed to generate</string>
    <string name="config_editor_simple_generate_failed_message">The config failed to generate, please reset it via the settings!</string>

    <!-- Advanced Config Editor -->
    <string name="config_editor_advanced_title">Advanced Config Editor</string>
    <string name="config_editor_advanced_failed_title">Config failed to load</string>
    <string name="config_editor_advanced_failed_message">The config failed to load, please reset it manually!</string>
    <string name="config_editor_advanced_user_auth_desc">Click to edit user auths</string>

    <!-- User Auths Editor -->
    <string name="user_auths_title">User Auths</string>
    <string name="user_auths_exists_title">User Auths</string>
    <string name="user_auths_exists_message">User auth already exists for that Xbox username</string>
    <string name="user_auths_new">New User Auth</string>
    <string name="user_auths_failed_title">User Auths failed to load</string>
    <string name="user_auths_failed_message">The user auths failed to load, please reset them manually!</string>
    <string name="user_auths_save_title">Save</string>
    <string name="user_auths_save_message">Do you wish to save the user auths?</string>
    <string name="user_auths_save_save">Save</string>
    <string name="user_auths_save_failed">Unable to save user auths!</string>
    <string name="user_auths_save_discard">Discard</string>

    <!-- User Auth Dialog -->
    <string name="user_auth_dialog_title">User Auth</string>
    <string name="user_auth_dialog_positive">Save</string>
    <string name="user_auth_dialog_negative">Cancel</string>

    <!-- User Auth Delete Confirmation Dialog -->
    <string name="user_auth_delete_dialog_title">User Auth</string>
    <string name="user_auth_delete_dialog_message">Are you sure you\'d like to delete the selected entry?</string>
    <string name="user_auth_delete_dialog_positive">Delete</string>
    <string name="user_auth_delete_dialog_negative">Cancel</string>

    <!-- About Screen -->
    <string name="about_about_title">About</string>
    <string name="about_links_title">Links</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_licences_title">Licences</string>
    <string name="about_version_copied">Copied version name to clipboard!</string>

    <!-- Settings Screen -->
    <string name="settings_geyser">Geyser</string>
    <string name="settings_storage">Storage Location</string>
    <string name="settings_config_editor">Config Editor</string>
    <string name="settings_reset_config">Reset Geyser config</string>
    <string name="settings_reset_user_auths">Reset Geyser user auths</string>
    <string name="settings_reset_config_success_title">Deleted config</string>
    <string name="settings_reset_config_success_message">Removed the Geyser config!</string>
    <string name="settings_reset_config_failed_title">Deletion failed</string>
    <string name="settings_reset_config_failed_message">Failed to remove the Geyser config!</string>
    <string name="settings_reset_config_missing_title">Missing config</string>
    <string name="settings_reset_config_missing_message">The Geyser config file is missing!</string>
    <string name="settings_reset_user_auths_success_title">Deleted user auths</string>
    <string name="settings_reset_user_auths_success_message">Cleared the Geyser user auths!</string>
    <string name="settings_reset_user_auths_missing_title">Missing user auths</string>
    <string name="settings_reset_user_auths_missing_message">The Geyser user auths are either missing or empty!</string>
</resources>