<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_geyser">

        <ListPreference
            app:defaultValue="internal"
            app:entries="@array/storage_entries"
            app:entryValues="@array/storage_values"
            app:key="geyser_storage"
            app:title="@string/settings_storage"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="pretty"
            app:entries="@array/config_editor_entries"
            app:entryValues="@array/config_editor_values"
            app:key="geyser_config_editor"
            app:title="@string/settings_config_editor"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="geyser_reset_config"
            app:title="@string/settings_reset_config" />

        <Preference
            app:key="geyser_reset_user_auths"
            app:title="@string/settings_reset_user_auths" />

    </PreferenceCategory>

</PreferenceScreen>