<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_proxy"
            android:icon="@drawable/ic_menu_proxy"
            android:title="@string/menu_proxy" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_menu_website"
            android:title="@string/menu_website" />
        <item
            android:id="@+id/nav_discord"
            android:icon="@drawable/ic_menu_discord"
            android:title="@string/menu_discord" />
    </group>
</menu>